<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">危废暂存柜终端</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="tip">提示</string>
    <string name="title_system_setting">系统设置</string>
    <string name="temperature">温度</string>
    <string name="humidity">湿度</string>
    <string name="tvocs">VOC</string>
    <string name="flammable_gas">可燃气体</string>
    <string name="ppm">PPM</string>
    <string name="icon_celsius">℃</string>
    <string name="icon_percent_sign">%</string>
    <string name="ppm_low">PPM(低位)</string>
    <string name="ppm_upper">PPM(高位)</string>
    <string name="rpm">RPM</string>
    <string name="connect_broker">连接Broker</string>
    <string name="connect_publish">发布</string>
    <string name="connect_subscribe">订阅</string>
    <string name="face_detection_result">人脸识别结果</string>
    <string name="face_detection">人脸识别</string>
    <string name="start">启动</string>
    <string name="qrcode_result">二维码结果</string>
    <string name="rfid">RFID</string>
    <string name="g">g</string>
    <string name="camera_status">视频状态</string>
    <string name="printer_status">打印机状态</string>
    <string name="locker_status">门锁状态</string>
    <string name="ac_status">空调状态</string>
    <string name="unlock">开锁</string>
    <string name="lock">关锁</string>
    <string name="mqtt">MQTT</string>
    <string name="setting">设置</string>
    <string name="fan_status">风机状态</string>
    <string name="fan_control">风机控制</string>
    <string name="sound_light_control">光氧控制</string>
    <string name="alert_status">告警状态</string>
    <string name="fan_start">启动风机</string>
    <string name="sub_board_info">副柜环境信息</string>
    <string name="sub_board_lock">副柜门锁控制</string>
    <string name="control_panel">控制面板</string>
    <string name="fan_stop">关闭风机</string>
    <string name="no_manage">单号管理</string>
    <string name="add_no_batch">新增批次</string>
    <string name="batch_no_count">单号数量：</string>
    <string name="batch_no_count_tip">只可输入数字，最大50</string>
    <string name="reset">复位</string>
    <string name="off_line_model">离线模式</string>
    <string name="user_management">使用人员管理</string>
    <string name="set_value_management">参数设置</string>
    <string name="hardware_log">设备日志</string>
    <string name="take_out">危废出柜</string>
    <string name="watch_camera">视频监控</string>
    <string name="take_in">危废入柜</string>
    <string name="stock_query">库存查询</string>
    <string name="in_out_query">库存台账</string>
    <string name="title_activity_account_setting">使用人员管理</string>
    <string name="admin_name">管理员姓名：</string>
    <string name="id">ID：</string>
    <string name="admin_id">管理员账号：</string>
    <string name="operator_id">操作员账号：</string>
    <string name="password">密码：</string>
    <string name="password_confirm">确认密码：</string>
    <string name="password_input">请输入密码</string>
    <string name="admin_password_input">请输入管理员密码</string>
    <string name="operator_password_input">请输入操作员密码</string>
    <string name="input_face_id">登录后将进行人像识别</string>
    <string name="login">登录</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="specific_engine_init_failed">%s init failed, code is:%d</string>
    <string name="camera_error_notice">\npossible reason:open two cameras at the same time is not allowed on this device</string>
    <string name="low_confidence_level">face low confidence level</string>
    <string name="recognize_failed_notice">拒绝:%s</string>
    <string name="camera_rgb">RGB CAMERA</string>
    <string name="camera_ir">IR CAMERA</string>
    <string name="permission_denied">permission denied!</string>
    <string name="recognize_success_notice">通过:%s</string>
    <string name="liveness_detect">liveness detect</string>
    <string name="register">开始录入</string>
    <string name="draw_ir_rect_mirror_horizontal">draw IR face rect mirror horizontal</string>
    <string name="draw_ir_rect_mirror_vertical">draw IR face rect mirror vertical</string>
    <string name="library_not_found">Library not found, please check if you put .so files into the project directory app\\src\\main\\jniLibs</string>
    <string name="active_engine">激活识别引擎</string>
    <string name="active">激活</string>
    <string name="hardware_setup">硬件设置</string>
    <string name="active_success">人像识别引擎激活成功</string>
    <string name="login_success">登录成功</string>
    <string name="already_activated">人像识别引擎已经激活</string>
    <string name="activated">已激活</string>
    <string name="unactivated">未激活</string>
    <string name="active_failed">人像识别引擎激活失败,Code: %d</string>
    <string name="switch_camera">switch camera</string>
    <string name="switch_camera_failed">switch camera failed</string>
    <string name="notice_change_detect_degree">camera switched, if no face detected, please change face detect degree in homepage</string>
    <string name="input_error_tip">请输入完整信息</string>
    <string name="init">初始化</string>
    <string name="title_login_admin">管理员登录</string>
    <string name="title_login_operator">操作员登录</string>
    <string name="title_auth">用户验证</string>
    <string name="title_spinner">选项</string>
    <string name="title_multi_spinner">多项</string>
    <string name="title_weight">称重</string>
    <string name="title_container_no_create">创建单号</string>
    <string name="back">返回</string>
    <string name="face_id_tip">请正对摄像头</string>
    <string name="equipment_manage_fragment">设备管理</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="fan_setup">风机设置</string>
    <string name="work_model">运行模式</string>
    <string name="fan_start_timer">风机定时</string>
    <string name="fan_run_stop_time">启停时长</string>
    <string name="init_frequency">初始频率</string>
    <string name="minute">(分钟)</string>
    <string name="fan_ppm_union">风机联动</string>
    <string name="ac_power_switch">空调开关</string>
    <string name="fc_reset">变频器复位</string>
    <string name="ac_control_model">空调控制模式</string>
    <string name="ac_work_model">空调工作模式</string>
    <string name="ac_work_model_auto">自动</string>
    <string name="ac_work_model_refrigeration">制冷</string>
    <string name="ac_work_model_heating">制热</string>
    <string name="ac_work_model_dehumidification">除湿</string>
    <string name="ac_work_model_fan">送风</string>
    <string name="ac_remote_ctrl_model">遥控器模式</string>
    <string name="ac_remote_ctrl_model_infrared_receive">红外学习遥控器接收模式</string>
    <string name="ac_remote_ctrl_model_infrared_launch">红外学习遥控器发射模式</string>
    <string name="ac_remote_ctrl_model_universal_pair">万能遥控器配对</string>
    <string name="ac_remote_ctrl_model_universal">万能遥控器模式</string>
    <string name="voc_threshold">VOC阈值</string>
    <string name="voc_alert">VOC告警</string>
    <string name="fg_alert">可燃气体告警</string>
    <string name="temp_high_alert">温度过高告警</string>
    <string name="temp_low_alert">温度过低告警</string>
    <string name="humidity_high_alert">湿度过高告警</string>
    <string name="humidity_low_alert">湿度过低告警</string>
    <string name="sound_light_alert">声光报警</string>
    <string name="manual">手动</string>
    <string name="auto">自动</string>
    <string name="none">无</string>
    <string name="close">关</string>
    <string name="saveSetup">保存设置</string>
    <string name="save">保存</string>
    <string name="open">开</string>
    <string name="Hz">Hz</string>
    <string name="engine_state">引擎状态</string>
    <string name="barcode_test">扫描测试</string>
    <string name="arc_active_tip">激活需要联网，请确保网络正常！</string>
    <string name="weight_test">称重测试</string>
    <string name="weight">称重</string>
    <string name="weight_tip">称重或手动输入(公斤)</string>
    <string name="finish">完成</string>
    <string name="loading" tools:ignore="TypographyEllipsis">正在加载中...</string>
    <string name="connection" tools:ignore="TypographyEllipsis">连接中...</string>
    <string name="sending" tools:ignore="TypographyEllipsis">发送中...</string>
    <string name="connect_the_printer_machine">连接打印机</string>
    <string name="get_targeting_permissions" translatable="false">搜索蓝牙需要定位权限</string>
    <string name="title_activity_storage">StorageActivity</string>
    <string name="deposit_count">入柜数量：</string>
    <string name="deposit_user">入柜人员：</string>
    <string name="deposit_unit">入柜单位：</string>
    <string name="deposit_number">入柜单号：</string>
    <string name="title_activity_cabinet_name">暂存柜信息设置</string>
    <string name="empty_blank" />
    <string name="select_storage_area">选择存储区域：</string>
    <string name="measure_spec">计量规格：</string>
    <string name="select_please">请选择</string>
    <string name="select_input">请输入</string>
    <string name="input_number_please">请输入数字</string>
    <string name="select_device">存储区域：</string>
    <string name="container_spec_colon">容器规格：</string>
    <string name="hazardous_source_colon">危废来源：</string>
    <string name="chem_name">化学品名：</string>
    <string name="unit_colon">单位：</string>
    <string name="shelf_no_colon">货架号：</string>
    <string name="packing_spec_colon">包装规格(g)：</string>
    <string name="other_info_colon">其他信息：</string>
    <string name="click_for_search">点击搜索</string>
    <string name="click_for_select">点击选择</string>
    <string name="purity_colon">纯度：</string>
    <string name="container_no_colon">暂存单号：</string>
    <string name="weight_colon">重量(KG)：</string>
    <string name="in_weight_colon">入柜重量(KG)：</string>
    <string name="out_weight_colon">出柜重量(KG)：</string>
    <string name="container_no_batch_name">批次名称：</string>
    <string name="container_no_batch_name_tip">支持中英文字符和数字</string>
    <string name="control_category_colon">管制类别：</string>
    <string name="harmful_ingredients_colon">有害成分：</string>
    <string name="submit">提交</string>
    <string name="search_chemical">搜索化学药品</string>
    <string name="print_label">打印标签</string>
    <string name="weight_tip_info">请将需要称重的物品放置于电子秤！</string>
    <string name="weight_button_click_tip">请点击称重按钮</string>
    <string name="printer_name">打印机名</string>
    <string name="search">查找</string>
    <string name="print_test">打印测试</string>
    <string name="set_printer_tip">点击图标，查找打印机</string>
    <string name="return_after_use">使用归还</string>
    <string name="usage_no_colon">使用单号：</string>
    <string name="usage_count_colon">使用数量：</string>
    <string name="usage_address_colon">使用地址：</string>
    <string name="user_colon">使用人员：</string>
    <string name="use_unit_colon">使用单位：</string>
    <string name="deposit_weight_colon">存储重量(g)：</string>
    <string name="tip_scan_or_input">请扫码或者输入</string>
    <string name="remain_weight_colon">剩余重量(g)：</string>
    <string name="used_weight_colon">使用重量(g)：</string>
    <string name="test">测试</string>
    <string name="weight_setup">称重设置</string>
    <string name="select_scales">请选择秤</string>
    <string name="calibration">标定</string>
    <string name="in_detail">入柜明细</string>
    <string name="take_out_detail">出柜明细</string>
    <string name="take_in_detail">入柜明细</string>
    <string name="load_more">加载更多</string>
    <string name="time_colon">时间：</string>
    <string name="count_colon">数量：</string>
    <string name="operator_colon">操作人：</string>
    <string name="serial_number_colon">流水号：</string>
    <string name="inventory_detail">库存详情</string>
    <string name="tvoc">主TVOC模块数量</string>
    <string name="stop">停止</string>
    <string name="fan_open">打开</string>
    <string name="TVOC">TVOC</string>
    <string name="modbus_address">Modbus地址</string>
    <string name="no_alert">无告警</string>
    <string name="input_container_no_please">请扫描或者输入暂存单号</string>
    <string name="offline_deposit">离线存单</string>
    <string name="switch_offline_model_tip">服务器访问失败,是否切换为离线模式？</string>
</resources>