<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DepositActivity"
    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_orange"
            android:gravity="center"
            android:onClick="onWeightButtonClick"
            android:text="@string/weight"
            android:textColor="@color/white"
            android:textSize="22px"
            app:layout_constraintBottom_toBottomOf="@+id/etWeightValue"
            app:layout_constraintEnd_toEndOf="@+id/tvHarmfulIngredientsValue"
            app:layout_constraintTop_toTopOf="@+id/etWeightValue" />

        <EditText
            android:id="@+id/etContainerNoValue"
            android:layout_width="480px"
            android:layout_height="wrap_content"
            android:layout_marginTop="32px"
            android:background="@drawable/background_edit"
            android:digits="NO0123456789"
            android:hint="@string/input_container_no_please"
            android:inputType="textVisiblePassword"
            android:minHeight="48px"
            android:padding="10px"
            android:textColor="@color/black"
            android:textSize="28px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16px"
            android:gravity="center"
            android:text="@string/container_no_colon"
            android:textColor="@color/white"
            android:textSize="30px"
            app:layout_constraintBottom_toBottomOf="@+id/etContainerNoValue"
            app:layout_constraintEnd_toStartOf="@+id/etContainerNoValue"
            app:layout_constraintTop_toTopOf="@+id/etContainerNoValue" />

        <TextView
            android:id="@+id/tvContainerSpecValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:background="@drawable/background_edit"
            android:enabled="false"
            android:hint="@string/select_please"
            android:onClick="onContainerSpecButtonClick"
            android:padding="10px"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="28px"
            app:layout_constraintEnd_toEndOf="@+id/etContainerNoValue"
            app:layout_constraintStart_toStartOf="@+id/etContainerNoValue"
            app:layout_constraintTop_toBottomOf="@+id/etContainerNoValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16px"
            android:gravity="center"
            android:text="@string/container_spec_colon"
            android:textColor="@color/white"
            android:textSize="30px"
            app:layout_constraintBottom_toBottomOf="@+id/tvContainerSpecValue"
            app:layout_constraintEnd_toStartOf="@+id/tvContainerSpecValue"
            app:layout_constraintTop_toTopOf="@+id/tvContainerSpecValue" />

        <TextView
            android:id="@+id/tvSourceValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:background="@drawable/background_edit"
            android:enabled="false"
            android:hint="@string/select_please"
            android:onClick="onSourceButtonClick"
            android:padding="10px"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="28px"
            app:layout_constraintEnd_toEndOf="@+id/tvContainerSpecValue"
            app:layout_constraintStart_toStartOf="@+id/tvContainerSpecValue"
            app:layout_constraintTop_toBottomOf="@+id/tvContainerSpecValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16px"
            android:gravity="center"
            android:text="@string/hazardous_source_colon"
            android:textColor="@color/white"
            android:textSize="30px"
            app:layout_constraintBottom_toBottomOf="@+id/tvSourceValue"
            app:layout_constraintEnd_toStartOf="@+id/tvSourceValue"
            app:layout_constraintTop_toTopOf="@+id/tvSourceValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16px"
            android:gravity="center"
            android:text="@string/harmful_ingredients_colon"
            android:textColor="@color/white"
            android:textSize="30px"
            app:layout_constraintBottom_toBottomOf="@+id/tvHarmfulIngredientsValue"
            app:layout_constraintEnd_toStartOf="@+id/tvHarmfulIngredientsValue"
            app:layout_constraintTop_toTopOf="@+id/tvHarmfulIngredientsValue" />

        <TextView
            android:id="@+id/tvHarmfulIngredientsValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:background="@drawable/background_edit"
            android:enabled="false"
            android:hint="@string/select_please"
            android:onClick="onHarmfulIngredientsValueClick"
            android:padding="10px"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="28px"
            app:layout_constraintEnd_toEndOf="@+id/tvSourceValue"
            app:layout_constraintStart_toStartOf="@+id/tvSourceValue"
            app:layout_constraintTop_toBottomOf="@+id/tvSourceValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16px"
            android:gravity="center"
            android:text="@string/shelf_no_colon"
            android:textColor="@color/white"
            android:textSize="30px"
            app:layout_constraintBottom_toBottomOf="@+id/etShelfNoValue"
            app:layout_constraintEnd_toStartOf="@+id/etShelfNoValue"
            app:layout_constraintTop_toTopOf="@+id/etShelfNoValue" />

        <EditText
            android:id="@+id/etShelfNoValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:background="@drawable/background_edit"
            android:digits="0123456789"
            android:enabled="false"
            android:hint="@string/input_number_please"
            android:inputType="number"
            android:padding="10px"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="28px"
            app:layout_constraintEnd_toEndOf="@+id/btnWeight"
            app:layout_constraintStart_toStartOf="@+id/etWeightValue"
            app:layout_constraintTop_toBottomOf="@+id/etWeightValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16px"
            android:gravity="center"
            android:text="@string/other_info_colon"
            android:textColor="@color/white"
            android:textSize="30px"
            app:layout_constraintBottom_toBottomOf="@+id/etOtherInfoValue"
            app:layout_constraintEnd_toStartOf="@+id/etOtherInfoValue"
            app:layout_constraintTop_toTopOf="@+id/etOtherInfoValue" />

        <EditText
            android:id="@+id/etOtherInfoValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:background="@drawable/background_edit"
            android:enabled="false"
            android:hint="@string/select_input"
            android:inputType="text"
            android:padding="10px"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="28px"
            app:layout_constraintEnd_toEndOf="@+id/etShelfNoValue"
            app:layout_constraintStart_toStartOf="@+id/etShelfNoValue"
            app:layout_constraintTop_toBottomOf="@+id/etShelfNoValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16px"
            android:gravity="center"
            android:text="@string/weight_colon"
            android:textColor="@color/white"
            android:textSize="30px"
            app:layout_constraintBottom_toBottomOf="@+id/etWeightValue"
            app:layout_constraintEnd_toStartOf="@+id/etWeightValue"
            app:layout_constraintTop_toTopOf="@+id/etWeightValue" />

        <EditText
            android:id="@+id/etWeightValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:layout_marginEnd="16px"
            android:background="@drawable/background_edit"
            android:digits="0123456789."
            android:enabled="false"
            android:hint="@string/weight_tip"
            android:inputType="number"
            android:padding="10px"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="28px"
            app:layout_constraintEnd_toStartOf="@+id/btnWeight"
            app:layout_constraintStart_toStartOf="@+id/tvHarmfulIngredientsValue"
            app:layout_constraintTop_toBottomOf="@+id/tvHarmfulIngredientsValue" />


        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etOtherInfoValue">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnReset"
                android:layout_width="120px"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:onClick="onResetButtonClick"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="24px" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOK"
                android:layout_width="120px"
                android:layout_height="wrap_content"
                android:layout_marginStart="16px"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:onClick="onSubmitButtonClick"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="24px" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/Theme.CabinetManager.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tool_bar_height"
            android:background="@android:color/transparent"
            android:padding="16px"
            app:popupTheme="@style/Theme.CabinetManager.PopupOverlay">

            <ImageButton
                android:id="@+id/toolbar_back"
                android:layout_width="90px"
                android:layout_height="40px"
                android:layout_gravity="start|center_vertical"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:onClick="onBackButtonClick"
                android:scaleType="fitCenter"
                android:src="@drawable/back_button"
                android:visibility="visible" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/take_in"
                android:textSize="@dimen/tool_bar_title_height"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off_line_model"
                    android:textColor="@color/white"
                    android:textSize="28px" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/swOfflineModel"
                    android:layout_width="130px"
                    android:layout_height="40px"
                    android:layout_marginStart="10px"
                    android:gravity="start"
                    android:textSize="28px" />
            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>