<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog">

    <FrameLayout
        android:layout_width="350px"
        android:layout_height="350px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60px"
        android:layout_marginLeft="80px"
        android:layout_marginRight="80px"
        android:layout_marginBottom="90px"
        android:background="@drawable/background_dialog">

        <TextureView
            android:id="@+id/single_camera_texture_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <me.liuzs.cabinetmanager.ui.arcface.FaceRectView
            android:id="@+id/single_camera_face_rect_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <Switch
        android:id="@+id/single_camera_switch_liveness_detect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20px"
        android:text="@string/liveness_detect"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="20px"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btRegister"
            android:layout_width="120px"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:onClick="register"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20px" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="120px"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:onClick="onBackButtonClick"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="20px" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/single_camera_recycler_view_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10px" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="12px"
        android:gravity="center"
        android:text="@string/face_id_tip"
        android:textColor="@color/white"
        android:textSize="24px" />

</FrameLayout>